-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 20, 21, 22
-
Component/s: hotspot
-
b11
-
riscv
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8327528 | 22.0.2 | Robbin Ehn | P4 | Resolved | Fixed | b01 |
| JDK-8327820 | 21.0.4 | Ludovic Henry | P4 | Resolved | Fixed | b01 |
https://lore.kernel.org/lkml/041c83e6-1ca5-4953-bcec-03571135165d@efficios.com/
UseSystemMemoryBarrier should not be allowed to turned on when running on Linux/RV.
There is no way telling from the syscall if this is on non-working kernel or a post 6.6 (cross-fingers it get fixed to 6.7) with a working syscall.
The linux membarrier wrapper should probably be informed on the current kernel version to determine if it's usable or not.
- backported by
-
JDK-8327528 RISC-V: UseSystemMemoryBarrier lacking proper OS support
-
- Resolved
-
-
JDK-8327820 RISC-V: UseSystemMemoryBarrier lacking proper OS support
-
- Resolved
-
- relates to
-
JDK-8292591 Experimentally add back barrier-less Java thread transitions
-
- Resolved
-
-
JDK-8329961 Buffer overflow in os::Linux::kernel_version
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21u-dev/d4e336d4
-
Commit
openjdk/jdk22u/cebe57d4
-
Commit
openjdk/jdk/68eb5a1d
-
Review
openjdk/jdk21u-dev/294
-
Review
openjdk/jdk22u/83
-
Review
openjdk/jdk/17889