8321075: RISC-V: UseSystemMemoryBarrier lacking proper OS support

Reviewed-by: rehn, fyang
Backport-of: 68eb5a1df5afdc011aa467f1c723a8792532dd3f